# c_senior

./: CMakeLists.txt
chapter1/: const.c  global_variable.c  heap_area.c  sizeof.c  typrdef.c  variable.c  void.c
chapter2/: calloc.c  function_call.c  macro.c  pointer_indirect_assignment.c  pointer_indirect_assignment2.c  pointer_step_length.c  realloc.c  sprint.c  stack.c  string_copy.c  wild_pointer.c
chapter4/: linklist.c
